# msu-manager

./: .gitignore  Makefile  README.md  pyproject.toml  settings.template.yaml
.github/workflows/: create-release.yml  pr-build.yml
debian/: changelog  install  postinst  preinst
debian/intel-nic/: reset-intel-nic.service  reset_i226v.sh
debian/lte/: lte-connect.sh
doc/: MANUAL.md
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/public/fonts/: fonts.css
frontend/src/: MainContentRouter.jsx
frontend/src/app/: App.jsx
frontend/src/app/assets/themes/: DecisionDetailStyles.js  MainTheme.jsx
frontend/src/app/commons/: CustomFooter.jsx  LandingLayout.jsx
frontend/src/app/commons/errorHandler/: ErrorHandler.jsx
frontend/src/localization/: i18n.js  translation-de-DE.js  translation-en-EN.js
msu_manager/: __init__.py  command.py  config.py  logconf.py  main.py
msu_manager/frontend/: index.html
msu_manager/gps/: __init__.py  monitor.py  skill.py  types.py
msu_manager/hcu/: __init__.py  controller.py  messages.py  monitor.py  protocol.py  routes.py  shutdown.py  skill.py
msu_manager/uplink/: __init__.py  monitor.py  ping.py  skill.py
msu_manager/uplink/modem/: TCL_IKE41VE1.py  __init__.py  dummy.py
msu_manager/uplink/status/: __init__.py  ping.py  throughput.py
tests/: test_command.py  test_config.py  test_hcu_monitor.py  test_messages.py  test_modem_tcl_ike41ve1.py  test_ping.py  test_throughput.py  test_uplink_monitor.py
tests/hcu/: conftest.py  test_hcu_api.py  test_hcu_monitor.py  test_shutdown.py
(+4 files in other folders)
