[tool.poetry]
name = "msu-manager"
version = "1.0.2"
package-mode = false
description = "MSU management component"
authors = ["ztarbug <foss@starwit.de>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "2.12.5"
pydantic-settings = "2.12.0"
pyaml = "25.7.0"
fastapi = {extras = ["standard"], version = "0.124.0"}
prometheus-client = "0.23.1"

[tool.poetry.group.dev.dependencies]
pytest = "9.0.2"
testcontainers = "4.13.3"
pytest-asyncio = "1.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
