[tool.poetry]
name = "msu-manager"
version = "3.0.3"
package-mode = false
description = "MSU management component"
authors = ["ztarbug <foss@starwit.de>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "2.12.5"
pydantic-settings = "2.12.0"
pyaml = "26.2.1"
fastapi = {extras = ["standard"], version = "0.128.5"}
prometheus-client = "0.24.1"
gpsd-client-async = "2.0.0"
pyserial-asyncio = "0.6"
psutil = "7.2.2"

[tool.poetry.group.dev.dependencies]
pytest = "9.0.2"
testcontainers = "4.14.1"
pytest-asyncio = "1.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
